[gd_scene load_steps=6 format=2]

[ext_resource path="res://cerita/cerita.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/cerita/scene12/Scene_12.png" type="Texture" id=2]
[ext_resource path="res://asset/cerita/scene12/Narasi_Scene12.wav" type="AudioStream" id=3]
[ext_resource path="res://cerita/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://cerita/scene12/Scene12.gd" type="Script" id=5]

[node name="Scene12" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="TextureRect" parent="Control" index="0"]
texture = ExtResource( 2 )

[node name="Panel" parent="Control" index="1"]
margin_left = 120.0
margin_top = 568.0
margin_right = 1088.0
margin_bottom = 688.0

[node name="Label" type="Label" parent="Control/Panel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Orang-orang melayu melihat orang kayo hitam mengikat rambutnya dengan keris 
atau dalam bahasa melayu disebut menggonjai. Sehingga keris tersebut 
dikenal dengan nama keris siginjai."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="narasi" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 3 )
[connection signal="pressed" from="Control/Panel2/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/Panel2/mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="Control/controlCerita/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Control/controlCerita/next" to="." method="_on_next_pressed"]
[connection signal="finished" from="narasi" to="." method="_on_narasi_finished"]
